load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gofile",
    srcs = ["gofile.go"],
    importpath = "github.com/rclone/rclone/backend/gofile",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/gofile/api",
        "//fs",
        "//fs/config",
        "//fs/config/configmap",
        "//fs/config/configstruct",
        "//fs/fserrors",
        "//fs/fshttp",
        "//fs/hash",
        "//fs/walk",
        "//lib/dircache",
        "//lib/encoder",
        "//lib/pacer",
        "//lib/rest",
    ],
)

go_test(
    name = "gofile_test",
    srcs = ["gofile_test.go"],
    deps = [
        ":gofile",
        "//fstest/fstests",
    ],
)
