load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "googlecloudstorage",
    srcs = ["googlecloudstorage.go"],
    importpath = "github.com/rclone/rclone/backend/googlecloudstorage",
    visibility = ["//visibility:public"],
    deps = [
        "//fs",
        "//fs/config",
        "//fs/config/configmap",
        "//fs/config/configstruct",
        "//fs/config/obscure",
        "//fs/fserrors",
        "//fs/fshttp",
        "//fs/hash",
        "//fs/walk",
        "//lib/bucket",
        "//lib/encoder",
        "//lib/env",
        "//lib/oauthutil",
        "//lib/pacer",
        "@org_golang_google_api//googleapi",
        "@org_golang_google_api//option",
        "@org_golang_google_api//storage/v1:storage",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//google",
    ],
)

go_test(
    name = "googlecloudstorage_test",
    srcs = ["googlecloudstorage_test.go"],
    deps = [
        ":googlecloudstorage",
        "//fstest",
        "//fstest/fstests",
    ],
)
