load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hdfs",
    srcs = [
        "fs.go",
        "hdfs.go",
        "hdfs_unsupported.go",
        "object.go",
    ],
    importpath = "github.com/rclone/rclone/backend/hdfs",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/hash",
            "//lib/encoder",
            "//lib/pacer",
            "//lib/readers",
            "@com_github_colinmarc_hdfs_v2//:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//client:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//config:go_default_library",
            "@com_github_jcmturner_gokrb5_v8//credentials:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "hdfs_test",
    srcs = ["hdfs_test.go"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            ":hdfs",
            "//fstest/fstests",
        ],
        "//conditions:default": [],
    }),
)
